Correct position of dark mode button
In full screen mode, the button is not placed in the right of the web - > Solved

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
 .head {
     width: 100%;
     display: flex;
+    justify-content: space-between;
     gap: 2.5rem;
     margin-top: 2.5rem;
 }
